--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ pytz==2023.3
 Pillow==9.5.0
 keras==2.12.0
 opencv-python==4.7.0.72
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
