Add large file using Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 .h5 filter=lfs diff=lfs merge=lfs -text
 modelResnet.h5 filter=lfs diff=lfs merge=lfs -text
+modelResnet.hdf5 filter=lfs diff=lfs merge=lfs -text
